Заменил заголовки в поле форм на legend

--- a/source/form.html
+++ b/source/form.html
@@ -35,7 +35,7 @@
           <h2 class="form__title">Заполните анкету и мы подберем<br> программу питания для вашего кота</h2>
 
           <fieldset class="form__info">
-            <h3 class="visually-hidden">Информация о Коте</h3>
+            <legend class="visually-hidden">Информация о Коте</legend>
             <p class="form__item">
               <label class="form__label form__label--text">
                 Имя:*
@@ -57,7 +57,7 @@
           </fieldset>
 
           <fieldset class="form__type">
-            <h3 class="visually-hidden">Тип программы</h3>
+            <legend class="visually-hidden">Тип программы</legend>
             <p class="form__item">
               <label class="form__label form__label--radio">
                 <input class="form__radio" type="radio"  value="weight-loss" name="program-type" checked>
@@ -79,7 +79,7 @@
           </fieldset>
 
           <fieldset class="form__contact">
-            <h3 class="form__subtitle title title--size-m title--black">Контактные данные (владельца кота)</h3>
+            <legend class="form__subtitle title title--size-m title--black">Контактные данные (владельца кота)</legend>
             <p class="form__item">
               <label class="form__label">
                 e-mail:*
@@ -95,14 +95,14 @@
           </fieldset>
 
           <fieldset class="form__comment">
-            <h3 class="form__subtitle title title--size-m title--black">Комментарий</h3>
+            <legend class="form__subtitle title title--size-m title--black">Комментарий</legend>
             <p class="form__item">
               <textarea class="form__text-area" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
             </p>
           </fieldset>
 
           <fieldset class="form__add">
-            <h3 class="form__subtitle title title--size-m title--black">Дополнительно</h3>
+            <legend class="form__subtitle title title--size-m title--black">Дополнительно</legend>
             <p class="form__item">
               <label class="form__label">
                 <input class="form__checkbox" type="checkbox"  value="sweetener" name="additional" checked>
