К боди подключен главный шрифт

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Кэт энерджи</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="content">
 
     <header class="page-header">
       <a class="logo logo--full" href="#">
