--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,7 @@
     <title>Кэт энерджи: Каталог продукции</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="content">
 
     <header class="page-header">
       <a class="page-header__logo" href="#">
