Шапка переделана под нужды адаптивности

--- a/source/form.html
+++ b/source/form.html
@@ -8,8 +8,8 @@
   <body class="content">
 
     <header class="page-header">
-      <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+      <a class="logo logo--full page-header__logo" href="#">
+        <img class="logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
@@ -145,8 +145,8 @@
         </p>
       </div>
       <div class="page-footer__container">
-        <a class="page-footer__logo" href="#">
-          <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
+        <a class="logo logo--short page-footer__logo" href="#">
+          <img class="logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
         </a>
         <ul class="social-list page-footer__social">
           <li class="social-list__item">
