--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,12 @@
   <body class="content">
 
     <header class="page-header">
-      <a class="logo logo--full" href="#">
-        <!-- <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи"> -->
-      </a>
-      <nav class="main-nav">
+      <div class="page-header__logo">
+        <a class="logo logo--full" href="#">
+          <img class="logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+        </a>
+      </div>
+      <nav class="main-nav page-header__nav">
         <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
@@ -118,7 +120,7 @@
       </div>
       <div class="page-footer__container">
         <a class="logo logo--short page-footer__logo" href="#">
-          <!-- <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"> -->
+          <img class="logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
         </a>
         <ul class="social-list page-footer__social">
           <li class="social-list__item">
