Добавлена адаптивность на планшеты для части главной страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,7 +29,7 @@
 
     <main class="page-main">
       <div class="page-main__container">
-        <h1 class="title title--size-l title--black">Каталог продукции</h1>
+        <h1 class="title title--size-l">Каталог продукции</h1>
         <section class="catalog page-main__catalog">
           <h2 class="visually-hidden">Наши товары</h2>
           <ul class="catalog__list">
@@ -202,7 +202,7 @@
         </section>
 
         <section class="additional page-main__additional">
-          <h2 class="additional__title title title--size-m title--black">Дополнительные товары</h2>
+          <h2 class="additional__title title title--size-m">Дополнительные товары</h2>
           <ul class="additional__list">
             <li class="additional__item">
               <h3 class="additional__name">Сахарозаменитель</h3>
