--- a/source/form.html
+++ b/source/form.html
@@ -29,7 +29,7 @@
 
     <main class="page-main">
       <div class="page-main__container">
-        <h1 class="title title--size-l title--black">Подбор программы</h1>
+        <h1 class="title title--size-l">Подбор программы</h1>
 
         <form class="form page-main__form" action="" method="POST">
           <h2 class="form__title">Заполните анкету и мы подберем<br> программу питания для вашего кота</h2>
@@ -79,7 +79,7 @@
           </fieldset>
 
           <fieldset class="form__contact">
-            <legend class="form__subtitle title title--size-m title--black">Контактные данные (владельца кота)</legend>
+            <legend class="form__subtitle title title--size-m">Контактные данные (владельца кота)</legend>
             <p class="form__item">
               <label class="form__label">
                 e-mail:*
@@ -95,14 +95,14 @@
           </fieldset>
 
           <fieldset class="form__comment">
-            <legend class="form__subtitle title title--size-m title--black">Комментарий</legend>
+            <legend class="form__subtitle title title--size-m">Комментарий</legend>
             <p class="form__item">
               <textarea class="form__text-area" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
             </p>
           </fieldset>
 
           <fieldset class="form__add">
-            <legend class="form__subtitle title title--size-m title--black">Дополнительно</legend>
+            <legend class="form__subtitle title title--size-m">Дополнительно</legend>
             <p class="form__item">
               <label class="form__label">
                 <input class="form__checkbox" type="checkbox"  value="sweetener" name="additional" checked>
