--- a/source/index.html
+++ b/source/index.html
@@ -8,50 +8,51 @@
   <body class="content">
 
     <header class="page-header">
-      <div class="page-header__logo">
-        <a class="logo logo--full" href="#">
-          <img class="logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
-        </a>
+      <div class="page-header__wrapper">
+        <div class="page-header__logo">
+          <a class="logo logo--full" href="#">
+            <img class="logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+          </a>
+        </div>
+        <nav class="main-nav page-header__nav">
+          <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a class="site-list__link site-list__link--active">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav class="main-nav page-header__nav">
-        <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a class="site-list__link site-list__link--active">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
     </header>
 
     <main class="page-main">
 
-      <h1 class="page-main__title title title--size-l title--main-font title--white">Функциональное питание для котов</h1>
+      <h1 class="visually-hidden">Кэт энерджи: питание для котов</h1>
 
-      <section class="product-banner page-main__product-banner">
-        <div class="page-main__container">
-          <h2 class="visually-hidden">Баннер продукта</h2>
-          <p class="product-banner__tagline">Занялся собой? Зайсмись и котом!</p>
+      <section class="product-banner page-main__product-banner page-main__container">
+          <h2 class="product-banner__title product-banner__title--mobile title title--size-l">Функциональное питание для котов</h2>
+          <p class="product-banner__tagline">Занялся собой? Займись котом!</p>
           <img class="product-banner__image" width="280" height="271" src="img/index-can-mobile@1x.png" alt="Кэт энерджи с курицей">
+          <!-- <img class="product-banner__image" width="709" height="609" src="img/index-can-tablet@1x.jpg" alt="Кэт энерджи с курицей"> -->
           <a class="product-banner__button button button--green" href="form.html">Подобрать программу</a>
-        </div>
       </section>
 
       <section class="programs programs--mb page-main__container">
           <h2 class="visually-hidden">Готовые программы питания</h2>
           <ul class="programs__list">
-            <li class="programs__item">
-              <h3 class="programs__title programs__title--cat-slim">Похудение</h3>
+            <li class="programs__item programs__item--cat-slim">
+              <h3 class="programs__title">Похудение</h3>
               <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
               <a class="programs__link" href="#">Каталог slim</a>
             </li>
-            <li class="programs__item">
-              <h3 class="programs__title programs__title--cat-pro">Набор массы</h3>
+            <li class="programs__item programs__item--cat-pro">
+              <h3 class="programs__title">Набор массы</h3>
               <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
               <a class="programs__link" href="#">Каталог pro</a>
@@ -60,26 +61,34 @@
       </section>
 
       <section class="advantage advantage--mb page-main__container">
-          <h2 class="advantage__title title title--size-l title--black">Как это работает</h2>
+          <h2 class="advantage__title title title--size-l">Как это работает</h2>
           <ul class="advantage__list">
-            <li class="advantage__item advantage__item--leaf ">
+            <li class="advantage__item advantage__item--one">
+              <p class="advantage__description advantage__description--leaf">
                 Функциональное питание содержит только полезные питательные вещества.
+              </p>
             </li>
-            <li class="advantage__item advantage__item--powder">
+            <li class="advantage__item advantage__item--two">
+              <p class="advantage__description advantage__description--powder">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+              </p>
             </li>
-            <li class="advantage__item advantage__item--dining">
+            <li class="advantage__item advantage__item--three">
+              <p class="advantage__description advantage__description--dining">
                 Замените один-два приема обычной еды на наше функциональное питание.
+              </p>
             </li>
-            <li class="advantage__item advantage__item--clock">
+            <li class="advantage__item advantage__item--four">
+              <p class="advantage__description advantage__description--clock">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+              </p>
             </li>
           </ul>
       </section>
 
       <section class="example">
         <div class="page-main__container">
-          <h2 class="example__title title title--size-l title--black">Живой пример</h2>
+          <h2 class="example__title title title--size-l">Живой пример</h2>
           <p class="example__description">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </p>
@@ -109,8 +118,8 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__address  address">
-        <div class="address__wrapper page-footer__container">
+      <div class="page-footer__address address">
+        <div class="address__wrapper">
           <p class="address__invite">Приглашаем<br> к сотрудничеству дилеров!</p>
           <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
@@ -133,9 +142,9 @@
             <a href="#" class="social__link social__link--facebook">Мы в Фейсбуке</a>
           </li>
         </ul>
-      </div>
-      <div class="copyright page-footer__copyright page-footer__container">
-        <a class="copyright__link" href="#">HTML Academy</a>
+        <div class="copyright page-footer__copyright">
+          <a class="copyright__link" href="#">HTML Academy</a>
+        </div>
       </div>
     </footer>
   </body>
