--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
 
     <main class="page-main">
 
-      <h1 class="visually-hidden">Кэт энерджи: питание для котов</h1>
+      <h1 class="visually-hidden">Кэт энерджи: главная страница</h1>
 
       <section class="product-banner page-main__product-banner page-main__container">
           <h2 class="product-banner__title product-banner__title--mobile title title--size-l">Функциональное питание для котов</h2>
