Убрал лишнюю обертку на лого

--- a/source/index.html
+++ b/source/index.html
@@ -10,11 +10,9 @@
 
     <header class="page-header">
       <div class="page-header__wrapper">
-        <div class="page-header__logo">
-          <a class="logo logo--full" href="#">
-            <img class="logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
-          </a>
-        </div>
+        <a class="logo logo--full page-header__logo" href="#">
+          <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+        </a>
         <nav class="main-nav page-header__nav">
           <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
           <ul class="main-nav__list site-list">
@@ -36,7 +34,7 @@
 
       <h1 class="visually-hidden">Кэт энерджи: главная страница</h1>
 
-      <section class="product-banner product-banner--bg-img page-main__product-banner page-main__container">
+      <section class="product-banner product-banner--bg-img page-main__product-banner">
           <h2 class="product-banner__title product-banner__title--mobile title title--size-l">Функциональное питание для котов</h2>
           <p class="product-banner__tagline">Занялся собой? Займись котом!</p>
           <img class="product-banner__image" width="280" height="271" src="img/index-can-mobile@1x.png" alt="Кэт энерджи с курицей">
