--- a/source/index.html
+++ b/source/index.html
@@ -63,22 +63,22 @@
       <section class="advantage advantage--mb page-main__container">
           <h2 class="advantage__title title title--size-l">Как это работает</h2>
           <ul class="advantage__list">
-            <li class="advantage__item advantage__item--one">
+            <li class="advantage__item advantage__item--number">
               <p class="advantage__description advantage__description--leaf">
                 Функциональное питание содержит только полезные питательные вещества.
               </p>
             </li>
-            <li class="advantage__item advantage__item--two">
+            <li class="advantage__item advantage__item--number">
               <p class="advantage__description advantage__description--powder">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
               </p>
             </li>
-            <li class="advantage__item advantage__item--three">
+            <li class="advantage__item advantage__item--number">
               <p class="advantage__description advantage__description--dining">
                 Замените один-два приема обычной еды на наше функциональное питание.
               </p>
             </li>
-            <li class="advantage__item advantage__item--four">
+            <li class="advantage__item advantage__item--number">
               <p class="advantage__description advantage__description--clock">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
               </p>
