--- a/source/form.html
+++ b/source/form.html
@@ -10,11 +10,9 @@
 
     <header class="page-header">
       <div class="page-header__wrapper">
-        <div class="page-header__logo">
-          <a class="logo logo--full" href="#">
-            <img class="logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
-          </a>
-        </div>
+        <a class="logo logo--full page-header__logo" href="#">
+          <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+        </a>
         <nav class="main-nav">
           <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
             <ul class="main-nav__list site-list">
