Пересобрал шапку и раздел баннера

--- a/source/index.html
+++ b/source/index.html
@@ -35,11 +35,9 @@
       <h1 class="visually-hidden">Кэт энерджи: главная страница</h1>
 
       <section class="product-banner product-banner--bg-img page-main__product-banner">
-          <h2 class="product-banner__title product-banner__title--mobile title title--size-l">Функциональное питание для котов</h2>
+          <h2 class="product-banner__title title title--size-l">Функциональное питание для котов</h2>
           <p class="product-banner__tagline">Занялся собой? Займись котом!</p>
           <img class="product-banner__image" width="280" height="271" src="img/index-can-mobile@1x.png" alt="Кэт энерджи с курицей">
-          <!-- <img class="product-banner__image" width="709" height="609" src="img/index-can-tablet@1x.jpg" alt="Кэт энерджи с курицей"> -->
-          <!-- <img class="product-banner__image" width="552" height="499" src="img/index-can-desktop@1x.png" alt="Кэт энерджи с курицей"> -->
           <a class="product-banner__button button button--green" href="form.html">Подобрать программу</a>
       </section>
 
