Доделанная адаптивная сетка для главной и каталога

--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="logo logo--full page-header__logo" href="#">
+        <a class="logo page-header__logo" href="#">
           <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
         </a>
         <nav class="main-nav page-header__nav">
@@ -35,10 +35,10 @@
       <h1 class="visually-hidden">Кэт энерджи: главная страница</h1>
 
       <section class="product-banner product-banner--bg-img page-main__product-banner">
-          <h2 class="product-banner__title title title--size-l">Функциональное питание для котов</h2>
-          <p class="product-banner__tagline">Занялся собой? Займись котом!</p>
-          <img class="product-banner__image" width="280" height="271" src="img/index-can-mobile@1x.png" alt="Кэт энерджи с курицей">
-          <a class="product-banner__button button button--green" href="form.html">Подобрать программу</a>
+        <h2 class="product-banner__title title title--size-l">Функциональное питание для котов</h2>
+        <p class="product-banner__tagline">Занялся собой? Займись котом!</p>
+        <img class="product-banner__image" width="280" height="271" src="img/index-can-mobile@1x.png" alt="Кэт энерджи с курицей">
+        <a class="product-banner__button button button--green" href="form.html">Подобрать программу</a>
       </section>
 
       <section class="programs programs--mb page-main__container">
@@ -85,31 +85,33 @@
       </section>
 
       <section class="example">
-        <div class="page-main__container">
-          <h2 class="example__title title title--size-l">Живой пример</h2>
-          <p class="example__description">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-          </p>
-          <ul class="example__list">
-            <li class="example__item">
-              <b class="example__value">5 кг</b>
-              <p class="example__index">снижение веса</p>
-            </li>
-            <li class="example__item">
-              <b class="example__value">60 дней</b>
-              <p class="example__index">затрачено времени</p>
-            </li>
-          </ul>
-          <h3 class="example__subtitle">Затраты на питание: 15 000 руб</h3>
-        </div>
-        <div class="example__wrapper">
-          <img class="example__image example__image--active" width="320" height="240" src="img/before-mobile@1x.png" alt="Борис до диеты">
-          <img class="example__image" width="320" height="240" src="img/after-mobile@1x.png" alt="Борис после диеты">
-        </div>
-        <div class="example__wrapper page-main__container">
-          <p class="example__before-after">Было</p>
-          <span class="example__toggle"></span>
-          <p class="example__before-after">Стало</p>
+        <div class="example__container">
+          <div class="example__description">
+            <h2 class="example__title title title--size-l">Живой пример</h2>
+            <p class="example__text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <div class="example__wrapper">
+              <ul class="example__list">
+                <li class="example__item">
+                  <b class="example__value">5 кг</b>
+                  <p class="example__index">снижение веса</p>
+                </li>
+                <li class="example__item">
+                  <b class="example__value">60 дней</b>
+                  <p class="example__index">затрачено времени</p>
+                </li>
+              </ul>
+              <b class="example__subtitle">Затраты на питание: <span>15 000 руб.</span></b>
+            </div>
+          </div>
+          <div class="example__slider">
+            <img class="example__image example__image--active" width="320" height="240" src="img/before-mobile@1x.png" alt="Борис до диеты">
+            <img class="example__image" width="320" height="240" src="img/after-mobile@1x.png" alt="Борис после диеты">
+            <p class="example__before-after">Было</p>
+            <span class="example__toggle"></span>
+            <p class="example__before-after">Стало</p>
+          </div>
         </div>
       </section>
 
@@ -119,14 +121,14 @@
       <div class="page-footer__address address">
         <div class="address__wrapper">
           <p class="address__invite">Приглашаем<br> к сотрудничеству дилеров!</p>
-          <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <p class="address__text">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
         <p class="address__map address__map--pin">
           <img class="address__map-image" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         </p>
       </div>
       <div class="page-footer__container">
-        <a class="logo logo--short page-footer__logo" href="#">
+        <a class="logo page-footer__logo" href="#">
           <img class="logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
         </a>
         <ul class="social-list page-footer__social">
