--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="logo logo--full page-header__logo" href="#">
+        <a class="logo page-header__logo" href="#">
           <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
         </a>
         <nav class="main-nav">
@@ -148,7 +148,7 @@
         </p>
       </div>
       <div class="page-footer__container">
-        <a class="logo logo--short page-footer__logo" href="#">
+        <a class="logo page-footer__logo" href="#">
           <img class="logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
         </a>
         <ul class="social-list page-footer__social">
