--- a/source/index.html
+++ b/source/index.html
@@ -196,6 +196,6 @@
       </div>
     </footer>
 
-    <script src="../js/app.js" type="module"></script>
+    <script src="js/app.js" type="module"></script>
   </body>
 </html>
