--- a/source/form.html
+++ b/source/form.html
@@ -31,70 +31,74 @@
     </header>
 
     <main class="page-main">
-      <div class="page-main__container">
+      <!-- <div class="page-main__container"> -->
         <h1 class="page-main__title title title--size-l">Подбор программы</h1>
 
         <form class="form page-main__form" action="" method="POST">
           <h2 class="form__title">Заполните анкету и мы подберем<br> программу питания для вашего кота</h2>
 
-          <fieldset class="form__info">
-            <legend class="visually-hidden">Информация о Коте</legend>
-            <p class="form__item">
-              <label class="form__label form__label--text">
-                Имя:*
-                <input class="form__text" type="text" name="cat-name"  placeholder="БАРСИК">
-              </label>
-            </p>
-            <p class="form__item">
-              <label class="form__label form__label--text">
-                Вес (кг):*
-                <input class="form__text" type="text" name="weight-name" placeholder="7">
-              </label>
-            </p>
-            <p class="form__item">
-              <label class="form__label form__label--text">
-                Возраст (лет):
-                <input class="form__text" type="text" name="cat-age" placeholder="7">
-              </label>
-            </p>
-          </fieldset>
+          <div class="form__container">
+            <fieldset class="form__info">
+              <legend class="visually-hidden">Информация о Коте</legend>
+              <p class="form__item">
+                <label class="form__label form__label--text">
+                  Имя:*
+                  <input class="form__text" type="text" name="cat-name"  placeholder="БАРСИК">
+                </label>
+              </p>
+              <p class="form__item">
+                <label class="form__label form__label--text">
+                  Вес (кг):*
+                  <input class="form__text" type="text" name="weight-name" placeholder="7">
+                </label>
+              </p>
+              <p class="form__item">
+                <label class="form__label form__label--text">
+                  Возраст (лет):
+                  <input class="form__text" type="text" name="cat-age" placeholder="7">
+                </label>
+              </p>
+            </fieldset>
 
-          <fieldset class="form__type">
-            <legend class="visually-hidden">Тип программы</legend>
-            <p class="form__item">
-              <label class="form__label form__label--radio">
-                <input class="form__radio" type="radio"  value="weight-loss" name="program-type" checked>
-                Похудение
-              </label>
-            </p>
-            <p class="form__item">
-              <label class="form__label form__label--radio">
-                <input class="form__radio" type="radio" value="weight-gain" name="program-type">
-                Набор массы
-              </label>
-            </p>
-            <p class="form__item">
-              <label class="form__label form__label--radio">
-                <input class="form__radio" type="radio" value="not-know" name="program-type">
-                Не знаю (нужен ваш совет)
-              </label>
-            </p>
-          </fieldset>
+            <fieldset class="form__type">
+              <legend class="visually-hidden">Тип программы</legend>
+              <p class="form__item">
+                <label class="form__label form__label--radio">
+                  <input class="form__radio" type="radio"  value="weight-loss" name="program-type" checked>
+                  Похудение
+                </label>
+              </p>
+              <p class="form__item">
+                <label class="form__label form__label--radio">
+                  <input class="form__radio" type="radio" value="weight-gain" name="program-type">
+                  Набор массы
+                </label>
+              </p>
+              <p class="form__item">
+                <label class="form__label form__label--radio">
+                  <input class="form__radio" type="radio" value="not-know" name="program-type">
+                  Не знаю (нужен ваш совет)
+                </label>
+              </p>
+            </fieldset>
+          </div>
 
           <fieldset class="form__contact">
             <legend class="form__subtitle title title--size-m">Контактные данные (владельца кота)</legend>
-            <p class="form__item">
-              <label class="form__label">
-                e-mail:*
-                <input class="form__text" type="email" name="e-mail" placeholder="kuklachev@gmail.com">
-              </label>
-            </p>
-            <p class="form__item">
-              <label class="form__label">
-                Телефон:*
-                <input class="form__text" type="tel" name="telephone"  placeholder="8 (960) 900-60-90">
-              </label>
-            </p>
+            <div class="form__container">
+              <p class="form__item">
+                <label class="form__label">
+                  e-mail:*
+                  <input class="form__text" type="email" name="e-mail" placeholder="kuklachev@gmail.com">
+                </label>
+              </p>
+              <p class="form__item">
+                <label class="form__label">
+                  Телефон:*
+                  <input class="form__text" type="tel" name="telephone"  placeholder="8 (960) 900-60-90">
+                </label>
+              </p>
+            </div>
           </fieldset>
 
           <fieldset class="form__comment">
@@ -131,10 +135,12 @@
               </label>
             </p>
           </fieldset>
-          <button class="form__submit button button--green" type="submit">Отправить заявку</button>
-          <i class="form__explanation">* — Обязательные поля</i>
+          <div class="form__wrapper">
+            <button class="form__submit button button--green" type="submit">Отправить заявку</button>
+            <i class="form__explanation">* — Обязательные поля</i>
+          </div>
         </form>
-      </div>
+      <!-- </div> -->
     </main>
 
     <footer class="page-footer">
