--- a/source/index.html
+++ b/source/index.html
@@ -131,7 +131,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__address address">
-        <div class="address__wrapper">
+        <div class="address__wrapper address__wrapper--white">
           <p class="address__invite">Приглашаем<br> к сотрудничеству дилеров!</p>
           <p class="address__text">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
