Добавлена смена фона на слайдере

--- a/source/index.html
+++ b/source/index.html
@@ -58,8 +58,8 @@
           </ul>
       </section>
 
-      <section class="advantage advantage--mb page-main__container">
-          <h2 class="advantage__title title title--size-l">Как это работает</h2>
+      <section class="advantage advantage--mb">
+          <h2 class="advantage__title title title--size-l page-main__container">Как это работает</h2>
           <ul class="advantage__list">
             <li class="advantage__item advantage__item--number">
               <p class="advantage__description advantage__description--leaf">
