--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
 
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="logo page-header__logo" href="#">
+        <a class="logo page-header__logo" href="index.html">
           <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
         </a>
         <nav class="main-nav">
@@ -211,9 +211,9 @@
 
       </section>
 
-      <section class="additional page-main__additional">
+      <section class="additional">
         <h2 class="additional__title additional__title--line title title--size-m">Дополнительные товары</h2>
-        <div class="additional-wrapper">
+        <div class="additional-wrapper page-main__additional">
           <ul class="additional__list">
             <li class="additional__item">
               <h3 class="additional__name">Сахарозаменитель</h3>
