--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="logo page-header__logo" href="#">
+        <a class="logo page-header__logo">
           <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
         </a>
         <nav class="main-nav page-header__nav">
