--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,11 @@
     <header class="page-header">
       <div class="page-header__wrapper">
         <a class="logo page-header__logo" href="index.html">
-          <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+          <picture>
+            <source media="(min-width: 1220px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+          </picture>
         </a>
         <nav class="main-nav">
           <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
@@ -38,7 +42,11 @@
           <li class="catalog__item product">
             <div class="product__wrapper">
               <a class="product__link" href="#">
-                <img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" alt="Кэт энерджи с курицей 500г">
+                <picture>
+                  <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                  <img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 500г">
+                </picture>
               </a>
               <table class="product__composition">
                 <tr class="product__title">
@@ -63,7 +71,11 @@
           <li class="catalog__item product">
             <div class="product__wrapper">
               <a class="product__link" href="#">
-                <img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" alt="Кэт энерджи с курицей 1000г">
+                <picture>
+                  <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                  <img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 1000г">
+                </picture>
               </a>
               <table class="product__composition">
                 <th class="product__title"><a class="product__link" href="#">Cat energy pro 1000 г</a></th>
@@ -86,7 +98,11 @@
           <li class="catalog__item product">
             <div class="product__wrapper">
               <a class="product__link" href="#">
-                <img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" alt="Кэт энерджи с рыбой 500г">
+                <picture>
+                  <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                  <img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 500г">
+                </picture>
               </a>
               <table class="product__composition">
                 <th class="product__title"><a class="product__link" href="#">Cat energy pro 500 г</a></th>
@@ -109,7 +125,11 @@
           <li class="catalog__item product">
             <div class="product__wrapper">
               <a class="product__link" href="#">
-                <img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" alt="Кэт энерджи с рыбой 1000г">
+                <picture>
+                  <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                  <img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 1000г">
+                </picture>
               </a>
               <table class="product__composition">
                 <th class="product__title"><a class="product__link" href="#">Cat energy pro 1000 г</a></th>
@@ -132,7 +152,11 @@
           <li class="catalog__item product">
             <div class="product__wrapper">
               <a class="product__link" href="#">
-                <img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" alt="Кэт энерджи с гречькой 500г">
+                <picture>
+                  <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                  <img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 500г">
+                </picture>
               </a>
               <table class="product__composition">
                 <th class="product__title"><a class="product__link" href="#">Cat energy slim 500 г</a></th>
@@ -155,7 +179,11 @@
           <li class="catalog__item product">
             <div class="product__wrapper">
               <a class="product__link" href="#">
-                <img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" alt="Кэт энерджи с гречькой 1000г">
+                <picture>
+                  <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                  <img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 1000г">
+                </picture>
               </a>
               <table class="product__composition">
                 <th class="product__title"><a class="product__link" href="#">Cat energy slim 1000 г</a></th>
@@ -178,7 +206,11 @@
           <li class="catalog__item product">
             <div class="product__wrapper">
               <a class="product__link" href="#">
-                <img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" alt="Кэт энерджи с рисом 500г">
+                <picture>
+                  <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                  <img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рисом 500г">
+                </picture>
               </a>
               <table class="product__composition">
                 <th class="product__title"><a class="product__link" href="#">Cat energy slim 500 г</a></th>
@@ -262,7 +294,11 @@
           <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <p class="address__map address__map--pin">
-          <img class="address__map-image" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+          <picture>
+              <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+            <img class="address__map-image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" width="320" height="400" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+          </picture>
         </p>
       </div>
       <div class="page-footer__container">
