Исправления с декоративными линиями в форме

--- a/source/form.html
+++ b/source/form.html
@@ -42,7 +42,7 @@
 
           <div class="form__container">
             <fieldset class="form__info">
-              <legend class="visually-hidden">Информация о Коте</legend>
+              <h3 class="visually-hidden">Информация о Коте</h3>
               <p class="form__item">
                 <label class="form__label form__label--text">
                   Имя:*
@@ -64,7 +64,7 @@
             </fieldset>
 
             <fieldset class="form__type">
-              <legend class="visually-hidden">Тип программы</legend>
+              <h3 class="visually-hidden">Тип программы</h3>
               <p class="form__item">
                 <input class="form__radio visually-hidden" id="weight-loss" type="radio"  value="weight-loss" name="program-type" checked>
                 <label class="form__label form__label--radio" for="weight-loss">
@@ -87,7 +87,7 @@
           </div>
 
           <fieldset class="form__contact form--line form--line-t">
-            <legend class="form__subtitle title title--size-m">Контактные данные<br> (владельца кота)</legend>
+            <h3 class="form__subtitle title title--size-m">Контактные данные<br> (владельца кота)</h3>
             <div class="form__container">
               <p class="form__item">
                 <label class="form__label form__label--email">
@@ -116,14 +116,14 @@
           </fieldset>
 
           <fieldset class="form__comment form--line">
-            <legend class="form__subtitle title title--size-m">Комментарий</legend>
+            <h3 class="form__subtitle title title--size-m">Комментарий</h3>
             <p class="form__item form__container">
               <textarea class="form__text-area" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
             </p>
           </fieldset>
 
           <fieldset class="form__add form--line">
-            <legend class="form__subtitle title title--size-m">Дополнительно</legend>
+            <h3 class="form__subtitle title title--size-m">Дополнительно</h3>
             <div class="form__wrapper">
               <p class="form__item">
                 <input class="form__checkbox visually-hidden" id="sweetener" type="checkbox"  value="sweetener" name="additional" checked>
