--- a/source/form.html
+++ b/source/form.html
@@ -22,19 +22,19 @@
             <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
           </picture>
         </a>
-        <nav class="main-nav">
+        <nav class="main-nav page-header__nav">
           <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item">
-                <a class="site-list__link" href="index.html">Главная</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="catalog.html">Каталог продукции</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link site-list__link--active">Подбор программы</a>
-              </li>
-            </ul>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a class="site-list__link" href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link site-list__link--active" href="#">Подбор программы</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
@@ -42,7 +42,7 @@
     <main class="page-main">
         <h1 class="page-main__title title title--size-l">Подбор программы</h1>
 
-        <form class="form page-main__form" action="" method="POST">
+        <form class="form page-main__form" action="#" method="POST">
           <h2 class="form__title">Заполните анкету и мы подберем<br> программу питания для вашего кота</h2>
 
           <div class="form__container">
@@ -95,19 +95,19 @@
             <h3 class="form__subtitle title title--size-m">Контактные данные<br> (владельца кота)</h3>
             <div class="form__container">
               <p class="form__item">
-                <label class="form__label form__label--email">
+                <label class="form__label">
                   e-mail:*
                   <input class="form__text" type="email" name="e-mail" placeholder="kuklachev@gmail.com">
-                  <svg class="form__icon" width="17" height="13" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
+                  <svg class="form__icon form__icon--mail" width="17" height="13" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
                     <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
                   </svg>
                 </label>
               </p>
               <p class="form__item">
-                <label class="form__label form__label--tel">
+                <label class="form__label">
                   Телефон:*
                   <input class="form__text" type="tel" name="telephone"  placeholder="8 (960) 900-60-90">
-                  <svg class="form__icon" width="20" height="20" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
+                  <svg class="form__icon form__icon--tel" width="20" height="20" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
                     <path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
                     <path
                       d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
@@ -170,7 +170,7 @@
           <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <p class="address__map address__map--pin">
-          <iframe src="https://yandex.ru/map-widget/v1/-/CGVqiR3-" width="320" height="400" frameborder="1" allowfullscreen="true"></iframe>
+          <iframe src="https://yandex.ru/map-widget/v1/-/CGVqiR3-" width="320" height="400"></iframe>
           <picture>
             <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
@@ -235,5 +235,6 @@
       </div>
     </footer>
 
+    <script src="js/app.js"></script>
   </body>
 </html>
