Добавлена поддержка меню навигации без js

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,8 +11,10 @@
     </script>
     <script src="js/picturefill.js" async></script>
   </head>
-  <body class="content">
-
+  <body class="content no-js">
+    <script>
+      document.body.classList.remove("no-js");
+    </script>
     <header class="page-header">
       <div class="page-header__wrapper">
         <a class="logo page-header__logo" href="index.html">
