--- a/source/form.html
+++ b/source/form.html
@@ -11,8 +11,10 @@
     </script>
     <script src="js/picturefill.js" async></script>
   </head>
-  <body class="content">
-
+  <body class="content no-js">
+    <script>
+      document.body.classList.remove("no-js");
+    </script>
     <header class="page-header">
       <div class="page-header__wrapper">
         <a class="logo page-header__logo" href="index.html">
@@ -235,6 +237,6 @@
       </div>
     </footer>
 
-    <script src="js/library/validation.js"></script>
+    <script src="js/validation.js"></script>
   </body>
 </html>
